# Agent_marketing_stategy

./: .gitignore  ARCHITECTURE_README.md  CHANGELOG.md  README.md  SETUP_PIPELINE.md  env_example.txt  pyproject.toml  test_llm.py
docs/: RESULTS_README.md  web_scraping_alternatives.md
src/marketing_posts/: crew.py  main.py
src/marketing_posts/config/: README_GAMING.md  agents.yaml  agents_gaming.yaml  gaming_inputs.yaml  llm_config.py  tasks.yaml  tasks_gaming.yaml
src/marketing_posts/core/: __init__.py  base_crew.py  config_manager.py  crew_factory.py  result_saver.py  web_tools.py
src/marketing_posts/crews/: __init__.py  gaming_crew.py  standard_crew.py
