[project]
name = "marketing_posts"
version = "0.1.0"
description = "marketing-posts using crewAI with DeepSeek LLM"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]==0.130.0",
    "crewai-tools>=0.4.6",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
marketing_posts = "marketing_posts.main:main"
train = "marketing_posts.main:main"
run_crew = "marketing_posts.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
